Meme classes move, proper names for Demotivational Memes instances.

--- a/resources/lang/en.json
+++ b/resources/lang/en.json
@@ -5,7 +5,7 @@
 
   "when-meme.title": "'When...' meme",
   "4-block-comics-meme.title": "4-block comics meme",
-  "demotivation-meme.title": "Demotivator",
+  "demotivational-poster-meme.title": "Demotivational meme",
 
   "create-meme-conversation.ask-meme-type": "Choose the meme to be created:",
   "create-meme-conversation.unsupported-meme": "Can't make such meme for now, choose another category.",
