--- a/resources/lang/en.json
+++ b/resources/lang/en.json
@@ -1,7 +1,17 @@
 {
-  "greetings": "",
+  "greetings": "He-hey, howdy! Nice to meet you.",
 
+  "pattern.cancel-conversation": ".*(cancel|back)",
+  "pattern.menu-start": ".*(start|menu|main menu|main_menu)",
+  "pattern.create-meme-conversation": ".*((create|make|new|my|draw|construct|build).*(a meme|meme|the meme|meme|mem|cool pic|pic|picture)|create_meme)",
+  "pattern.generate-meme-conversation": ".*((generate|gen|imagine|ai|send|do).*(a meme|meme|the meme|meme|mem|cool pic|pic|picture)|generate_meme)",
+
+  "menu.title": "Main menu:",
   "menu.back": "Back",
+
+  "menu.options.generate-meme": "☺ Generate a meme",
+  "menu.options.create-meme": "\uD83D\uDD8C Create a meme",
+  "menu.options.settings": "⚙ Settings",
 
   "when-meme.title": "'When...' meme",
   "4-block-comics-meme.title": "4-block comics meme",
@@ -15,6 +25,11 @@
   "create-when-meme-conversation.step-3": "[Step 3/3]\nSend the bottom text of a meme.",
   "create-when-meme-conversation.done": "Here it is:",
 
+  "create-demotivational-poster-meme-conversation.step-1": "[Step 1/3]\nSend an image of a meme.",
+  "create-demotivational-poster-meme-conversation.step-2": "[Step 2/3]\nSend the title of a meme.",
+  "create-demotivational-poster-meme-conversation.step-3": "[Step 3/3]\nSend the subtitle of a meme.",
+  "create-demotivational-poster-meme-conversation.done": "Here it is:",
+
   "generate-meme-conversation.ask-meme-type": "Choose the meme to be generated:",
   "generate-meme-conversation.unsupported-meme": "Can't make such meme for now, choose another category.",
 
@@ -22,31 +37,31 @@
 
 
 
-  "settings-types.font.title": "Text font",
-  "settings-types.font.description": "The font of texts in memes (for this chat only).",
+  "settings-types.font.title": "Text font look",
+  "settings-types.font.description": "The font look of texts in memes (applied for this chat only).",
 
   "settings-types.color.title": "Text color",
-  "settings-types.color.description": "The color of texts in memes (for this chat only).",
+  "settings-types.color.description": "The color of texts in memes (applied for this chat only).",
 
   "settings-types.shadow.color.title": "Text shadow font",
-  "settings-types.shadow.color.description": "The color of shadows of texts in memes (for this chat only).",
+  "settings-types.shadow.color.description": "The color of shadows of texts in memes (applied for this chat only).",
 
-  "settings-types.demotivation.bg.color.title": "Demotivator's background color",
-  "settings-types.demotivation.bg.color.description": "",
+  "settings-types.demotivational.bg.color.title": "Demotivator's background color",
+  "settings-types.demotivational.bg.color.description": "The background color of a demotivational poster meme.",
 
-  "settings-types.demotivation.border.color.title": "",
-  "settings-types.demotivation.border.color.description": "",
+  "settings-types.demotivational.border.color.title": "Demotivator's border color",
+  "settings-types.demotivational.border.color.description": "The border color of a demotivational poster meme.",
 
-  "settings-types.show-author.title": "",
-  "settings-types.show-author.description": "",
+  "settings-types.show-author.title": "Mention me",
+  "settings-types.show-author.description": "Mention you in a meme's description, everyone will see messaging platform, ID, Name and Surname (or just username).\nNote: mentioning is applied only for generated memes, user-made memes are not public.",
 
 
-  "unknown-command.phrase-type-menu": "",
-  "unknown-command.phrase-1": "",
-  "unknown-command.phrase-2": "",
-  "unknown-command.phrase-3": "",
-  "unknown-command.phrase-4": "",
-  "unknown-command.phrase-5": "",
-  "unknown-command.phrase-6": "",
-  "unknown-command.phrase-7": ""
+  "unknown-command.phrase-type-menu": "Type 'menu' to view menu options.",
+  "unknown-command.phrase-1": "Sorry, but I didn't understand you \uD83D\uDE12",
+  "unknown-command.phrase-2": "I can't find the right pattern to answer your request \uD83D\uDE12",
+  "unknown-command.phrase-3": "Incorrect command.",
+  "unknown-command.phrase-4": "Well... sounds good, but I still can't understand you.",
+  "unknown-command.phrase-5": "[COMMAND NOT FOUND]",
+  "unknown-command.phrase-6": "Wow... I can't even say anything...",
+  "unknown-command.phrase-7": "Unknown command pattern."
 }
