--- a/resources/lang/en.json
+++ b/resources/lang/en.json
@@ -77,6 +77,19 @@
   "manage-bank.info": "ℹ️ Bank information.\n\n\uD83C\uDD94 ID: :Id\n\uD83D\uDCAC Title: :Title\n\uD83D\uDCC4 Description: :Description\n\uD83D\uDD52 Created: :Created_at\n\uD83D\uDD52 Updated: :Updated_at\n\uD83D\uDC64 Conversation ID: :Conversation_id\n\uD83D\uDC64 Conversation title: :conversation_title",
   "manage-bank.not-found-error": "Bank was internally deleted or moved (not found).",
 
+  "manage-bank.see-full-description": "\uD83D\uDCC4 See full description",
+  "manage-bank.edit": "✏ Edit",
+  "manage-bank.delete": "\uD83D\uDDD1 Delete",
+  "manage-bank.learn-a-text": "\uD83D\uDCDC Learn a text",
+  "manage-bank.push-an-image": "\uD83C\uDF05 Push an image",
+  "manage-bank.refresh-info": "\uD83D\uDD01 Refresh information",
+
+  "manage-bank.enter-new-title": "Enter new title:\n(current title: :Title)",
+  "manage-bank.enter-new-description": "Enter new description:\n(current description: :Description)",
+  "manage-bank.rename-done": "Done.",
+  "manage-bank.error-exception": "Sorry, but something went wrong while managing the bank: ",
+
+  "unknown-option-selected": "Unknown option selected.",
 
   "unknown-command.phrase-type-menu": "\nType 'menu' to view menu options.",
   "unknown-command.phrase-1": "Sorry, but I didn't understand you \uD83D\uDE12",
