--- a/resources/lang/en.json
+++ b/resources/lang/en.json
@@ -6,6 +6,7 @@
   "pattern.create-meme-conversation": ".*((create|make|new|my|draw|construct|build).*(a meme|meme|the meme|meme|mem|cool pic|pic|picture)|create_meme)",
   "pattern.generate-meme-conversation": ".*((generate|gen|imagine|ai|send|do).*(a meme|meme|the meme|meme|mem|cool pic|pic|picture)|generate_meme)",
   "pattern.admin-menu": ".*(admin|adm|admn|adn|manage|admin menu|moderate|moderator|administrator)",
+  "pattern.language-selection": ".*(language|lang|change language|locale|localization|loc|change locale|\uD83C\uDF10|\uD83C\uDF0D|\uD83C\uDF0E|\uD83C\uDF0F)",
 
   "pagination.previous": "<< Previous",
   "pagination.next": "Next >>",
@@ -67,7 +68,7 @@
   "settings-types.demotivational.border.color.description": "The border color of a demotivational poster meme.",
 
   "settings-types.show-author.title": "Mention me",
-  "settings-types.show-author.description": "Mention you in a meme's description, everyone will see messaging platform, ID, Name and Surname (or just username).\nNote: mentioning is applied only for generated memes, user-made memes are not public.",
+  "settings-types.show-author.description": "Make messaging platform, ID, Name and Surname (or just username) of current user be mentioned in the meme's description.\nNote: mentioning is applied only for generated memes, user-made memes are not public.",
 
 
 
@@ -94,7 +95,15 @@
   "chaining-bank.hint": "chaining-bank.hint",
   "chaining-bank.random-menu.random-result": "Generated pairs:\n:list",
 
+  "language.selection-empty": "No languages available.",
+  "language.hint": "Select language:",
+  "language.selection.previous": "<<",
+  "language.selection.next": ">>",
+  "language.selection.done": "Current locale set to: :LOCALE",
+
+  "language.selection-error": "Current language is not available for now: English will be used instead. Type 'lang' to see the list of available ones.",
   "unknown-option-selected": "Unknown option selected.",
+  "unexpected-error": "Sorry, but something went wrong.",
 
   "unknown-command.phrase-type-menu": "\nType 'menu' to view menu options.",
   "unknown-command.phrase-1": "Sorry, but I didn't understand you \uD83D\uDE12",
