RU locale update

--- a/resources/lang/ru.json
+++ b/resources/lang/ru.json
@@ -5,7 +5,7 @@
   "pattern.menu-start": ".*(начать|меню|главное меню|главная|менюшка|менюха|главное_меню|main_menu)",
   "pattern.create-meme-conversation": ".*((создать|запилить|сделать|разработать|нарисовать|построить|скрафтить|собрать|конструктор).*(мема|мемов|мемы|мем|пикчи|картинки|изображения)|create_meme)",
   "pattern.generate-meme-conversation": ".*((сгенерировать|сгенерить|вообразить|аи|новый|генерить).*(мема|мемов|мемы|мем|пикчи|картинки|изображения)|generate_meme)",
-  "pattern.admin-menu": ".*(админ|админка|управление|пу|меню админа|модерка|модерация|меню модератора|модератор|администратор)",
+  "pattern.admin-menu": ".*(админ|админка|управление|пу|меню админа|модерка|модерация|меню модератора|модератор|администратор|admin)",
   "pattern.language-selection": ".*(сменить язык|язык|локализация|смена языка|изменить язык|выбор языка)",
 
   "pagination.previous": "<< Назад",
